client/minikube/API/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-api
spec:
  type: NodePort
  selector:
    app: go-api
  ports:
    - port: 8000
      protocol: TCP
