client/minikube/API/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: go-api.com
      http:
        paths:
          - path: /
            backend:
              serviceName: go-api
              servicePort: 4000
